@@ -7,7 +7,7 @@ local lib = require "api.lib"
 local progression = {}
 for _, recipe in pairs(data.raw.recipe) do
     for _, result in pairs(recipe.results or {}) do
-        if data.raw["transport-belt"][result.name] or data.raw["underground-belt"][result.name] or data.raw["splitter"][result.name] then
+        if data.raw["transport-belt"][result.name] or data.raw["underground-belt"][result.name] or data.raw["splitter"][result.name] or data.raw["loader"][result.name] or data.raw["loader-1x1"][result.name] then
             table.insert(progression, result.name)
             break
         end
@@ -15,8 +15,8 @@ for _, recipe in pairs(data.raw.recipe) do
 end
 
 table.sort(progression, function(a, b)
-    local a_prot = data.raw["transport-belt"][a] or data.raw["underground-belt"][a] or data.raw["splitter"][a]
-    local b_prot = data.raw["transport-belt"][b] or data.raw["underground-belt"][b] or data.raw["splitter"][b]
+    local a_prot = data.raw["transport-belt"][a] or data.raw["underground-belt"][a] or data.raw["splitter"][a] or data.raw["loader"][a] or data.raw["loader-1x1"][a]
+    local b_prot = data.raw["transport-belt"][b] or data.raw["underground-belt"][b] or data.raw["splitter"][b] or data.raw["loader"][b] or data.raw["loader-1x1"][b]
     return a_prot.speed > b_prot.speed
 end)
 
@@ -28,6 +28,10 @@ for _, item_name in pairs(progression) do
         subgroup = "underground-belt"
     elseif data.raw["splitter"][item_name] then
         subgroup = "splitter"
+    elseif data.raw["loader"][item_name] then
+        subgroup = "loader"
+    elseif data.raw["loader-1x1"][item_name] then
+        subgroup = "loader-1x1"
     else
         lib.log_error("data-updates.lua: Unrecognized belt type: " .. item_name)
     end
