@@ -13,6 +13,7 @@ Date: 21/1/26
     - Item buff enhancement (upgrading) is now gated behind the new "Cracking the Vault" quest.
     - "Enhance All" feature for item buffs is now gated behind the new "Lockbreaker" quest.
     - Dungeon chests contain fewer but more valuable items (overall better).
+    - Recategorized loaders into their own subgroup so that editor mode has an organized arrangement of belt types.
   Balancing:
     - Added stromatolites to the starter hex on Gleba.
 ---------------------------------------------------------------------------------------------------
